# gx_ecs

./: CMakeLists.txt  LICENSE
.zed/: settings.json
src/: CMakeLists.txt  gx_comp.c  gx_comp.h  gx_ecs.c  gx_ecs.h  gx_entity.c  gx_entity.h
src/utils/: gx_deb.h  gx_dllist.c  gx_dllist.h  gx_entity_queue.c  gx_entity_queue.h  gx_log.h
tests/: CMakeLists.txt  test_comp_1.c  test_comp_2.c  test_comp_3.c  test_comp_4.c
